# dj_mail_service

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: manager_group.json
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingattempt_options.py  0003_alter_mailing_end_time_alter_mailing_start_time.py  0004_alter_mailing_options.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  user_list.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_email_verified_and_more.py  0003_customuser_role.py  0004_remove_customuser_role.py  0005_alter_customuser_options.py
users/templates/users/: login.html  logout.html  register.html  register_success.html  verification_error.html  verification_success.html
