[project]
name = "dj-mail-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Ksenia Veremyeva"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django (>=5.2.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
